# pokemon-showdown

./: .gitignore  README.md  pyproject.toml
configs/exp/: smoke_random.yaml
docs/: closed_sheet_observation_v2.md
ml/: README.md  pyproject.toml
ml/search/: _test_megas.ts  chance.ts  eval.ts  selection.ts  solve.ts
ml/search/teams/: megazard.txt  rain.txt
ml/src/psrl/actions/: doubles_v1.py
ml/src/psrl/cli/: enumerate_replays.py  eval.py  parse_replays.py  replay_card.py
ml/src/psrl/data/teams/: __init__.py
ml/src/psrl/data/teams/vgc2026_regma/: goodstuff_01.packed  goodstuff_01.team.txt
ml/src/psrl/encoders/: doubles_v1.py
ml/src/psrl/env/: vgc_doubles_env.py
ml/src/psrl/opponents/: random.py
ml/src/psrl/replays/: stats.py
ml/src/psrl/rewards/: terminal.py
ml/src/psrl/utils/: versioning.py
ml/tests/unit/: test_replay_api.py  test_replay_census.py
scripts/: ingest_corpus.sh  start_ps_server.sh
search/: README.md  _test_enum.ts  _test_oracle.ts  _test_selection.ts  actions.ts  cli.ts  engine.ts  matrix.ts  oracle.ts  package.json  select-cli.ts  smoke.ts
src/psrl/: __init__.py
src/psrl/cli/: download_replays.py  fetch_replays.py  train.py
src/psrl/replays/: api.py  dataset.py
src/psrl/training/: sb3_runner.py
tests/unit/: test_replay_dataset.py  test_shapes.py
