[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psrl"
version = "0.0.0"
description = "Reinforcement learning agent for Pokémon Champions VGC 2026 Reg M-A"
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sam Armstrong" }]

dependencies = [
  "poke-env>=0.11,<0.12",
  "torch>=2.3",
  "stable-baselines3>=2.4",
  "sb3-contrib>=2.4",
  "gymnasium>=1.0",
  "numpy>=1.26,<2.2",
  "pydantic>=2.7",
  "omegaconf>=2.3",
  "structlog>=24.1",
  "tensorboard>=2.16",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pyright>=1.1.380",
  "pytest>=8.2",
  "pytest-xdist>=3.6",
  "hypothesis>=6.100",
]

[project.scripts]
psrl-train = "psrl.cli.train:main"
psrl-eval = "psrl.cli.eval:main"

[tool.hatch.build.targets.wheel]
packages = ["src/psrl"]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: integration tests that boot a PS server (opt-in via `-m slow`)",
]
addopts = "-ra --strict-markers"
